--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -227,6 +227,17 @@
       </svg>
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
+      <div>
+        <button type="button" class="btn btn-primary">Primaire</button>
+        <button type="button" class="btn btn-secondary">Secondaire</button>
+        <button type="button" class="btn btn-success">Succès</button>
+        <button type="button" class="btn btn-danger">Danger</button>
+        <button type="button" class="btn btn-warning">Avertissement</button>
+        <button type="button" class="btn btn-info">Info</button>
+        <button type="button" class="btn btn-light">Light</button>
+        <button type="button" class="btn btn-dark">Foncé</button>
+        <button type="button" class="btn btn-link">Lien</button>
+      </div>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
