--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,6 +5,7 @@
                 <a class="navbar-brand" routerLink="/">
                     <img src="assets/images/Logo-au-petit-village.jpg" alt="Logo au petit village">
                 </a>
+                <h1>Au Petit Village</h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
