--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,16 @@
 <header>
     <div>
         <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark text-light text-uppercase">
-            <div class="container-fluid">
-                <a class="navbar-brand" routerLink="/">
+            <div class="container-fluid" *ngFor="let info of infos">
+                <a class="nav-link" routerLink="/">
                     <img src="assets/images/Logo-au-petit-village.jpg" alt="Logo au petit village">
                 </a>
-                <h1>Au Petit Village</h1>
+                <h1>{{ info.title }}</h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/">Accueil</a>
                         </li>
