--- a/src/styles.css
+++ b/src/styles.css
@@ -39,7 +39,16 @@ body {
     background-color: var(--ylw);
 }
 
+section {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Bubblebody';
     margin-bottom: 10px;
+}
+
+a:hover {
+    cursor: pointer;
 }
