product about contact done

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -10,7 +10,7 @@
     <div class="mention pb-3">
         <small>Site réalisé par Nayet Lucas avec Angular</small>
     </div>
-    <button *ngIf="showButton" class="btn btn-warning back-to-top" (click)="scrollToTop()">
+    <button *ngIf="showButton" class="btn btn-up back-to-top" (click)="scrollToTop()">
         ↑
     </button>
 </footer>
