--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <main>
   <div>
-    <app-header/>
-    <router-outlet />
-    <app-footer/>
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
   </div>
 </main>
 
