--- a/src/app/components/products-cards/products-cards.component.css
+++ b/src/app/components/products-cards/products-cards.component.css
@@ -10,3 +10,11 @@
 p#no-result {
     font-size: 3rem;
 }
+
+strong {
+    font-size: 1.5rem;
+}
+
+.btn-details {
+    background-color: var(--ylw);
+}
